# astraea

./: Cargo.toml  Containerfile  Justfile
.github/workflows/: oci.yml  unit-tests.yml
astraea/: Cargo.toml
astraea-cli/: Cargo.toml
astraea-cli/src/: main.rs
astraea-cli/src/cli/: args.rs  mod.rs  report.rs
astraea-derive/: Cargo.toml
astraea-derive/src/: lib.rs
astraea-modules/: Cargo.toml
astraea-modules/src/: combinatorics.rs  instruction.rs  integer.rs  lib.rs  module.rs  natural.rs  polynomial.rs  rational.rs  symbol.rs  symbolic.rs  validate.rs
astraea-parser/: Cargo.toml
astraea-parser/src/: ast.rs
astraea-parser/src/ast/: dfs.rs  dsl.rs  mod.rs  node.rs  tree.rs
astraea-symbol/: Cargo.toml
astraea-symbol/src/: dfs.rs  lib.rs  node.rs  parse.rs  token.rs  tree.rs
astraea-symbol/src/ast/: dfs.rs  mod.rs  node.rs  reduce.rs  tree.rs
astraea-symbol/src/parse/: mod.rs  postfix.rs  prefix.rs
astraea/benches/: natural.rs
astraea/src/: cli.rs  digit.rs  error.rs  lib.rs  main.rs  prelude.rs  report.rs  sign.rs
astraea/src/algebra/: class_inclusion.rs  group_like.rs  mod.rs  object.rs  other.rs  properties.rs  ring_like.rs  traits.rs
astraea/src/biguint/: biguint.rs  digit.rs  mod.rs
astraea/src/cli/: args.rs  report.rs
astraea/src/combinatorics/: catalan.rs  combination.rs  factorial.rs  fibonacci.rs  mod.rs  placements.rs  simplex.rs  stirling.rs  subfactorial.rs
astraea/src/core/: mod.rs  module.rs
astraea/src/formatting/: mod.rs  traits.rs
astraea/src/integer/: integer.rs  mod.rs
astraea/src/math/: digit.rs  sign.rs  traits.rs
astraea/src/natural/: digit.rs  mod.rs  natural.rs  number.rs
astraea/src/polynomial/: mod.rs  monomial.rs  polynomial.rs
astraea/src/rational/: mod.rs  number.rs  rational.rs
docs/: book.toml
docs/src/: README.md
libastraea/: Cargo.toml
libastraea/benches/: natural.rs
libastraea/src/: lib.rs
libastraea/src/core/: errors.rs  instruction.rs  mod.rs  module.rs  traits.rs
libastraea/src/formatting/: formatting.rs  mod.rs  traits.rs
libastraea/src/integer/: integer.rs  mod.rs  module.rs
libastraea/src/math/: digit.rs  mod.rs  sign.rs  traits.rs
libastraea/src/natural/: digit.rs  mod.rs  module.rs  number.rs
libastraea/src/parse/: parse.rs
libastraea/src/polynomial/: mod.rs  module.rs  monomial.rs  polynomial.rs
libastraea/src/rational/: mod.rs  module.rs  number.rs
libastraea/src/validate/: validate.rs
