[workspace]
resolver = "3"
members = [
    "astraea",
    "astraea-cli",
    "astraea-derive",
    "astraea-modules",
]

[workspace.package]
authors = ["Ivan Shelepugin <shelepuginivanm@gmail.com>"]
version = "0.1.0-alpha.0"
license = "MIT"
edition = "2024"
repository = "https://github.com/shelepuginivan/astraea"
categories = ["mathematics"]
keywords = [
    "astraea",
    "abstract-algebra",
    "discrete-mathematics",
    "arbitrary-precision-arithmetic",
]

[workspace.dependencies]
astraea = { path = "astraea" }
astraea-cli = { path = "astraea-cli" }
astraea-derive = { path = "astraea-derive" }
astraea-modules = { path = "astraea-modules" }
