[package]
name = "astraea-cli"
categories = ["command-line-utilities", "mathematics"]
keywords = ["astraea", "cli"]
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "astraea"
path = "src/main.rs"
doc = false

[dependencies]
ariadne = "0.6.0"
astraea = { workspace = true }
astraea-modules = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
