[package]
name = "astraea-modules"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
astraea = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
