[package]
name = "astraea"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
astraea-derive = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.9.2"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "natural"
harness = false

[features]
derive = ["dep:astraea-derive"]
